styles/place.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

:root {
    --primary-color: rgb(166, 13, 13);
    --secondary-color: rgb(255,255,255);
    --accent-color: rgb(44, 132, 36);
}

header, main, footer {
    max-width: 500px;
    margin: 0px auto;
    font-family: "Roboto", sans-serif;
}

header {
    display: flex;
    flex-direction: column;
    text-align: center;
    background-color: var(--primary-color);
    color: white;
    width: 100%;
}

.hero img {
    border-bottom: 5px solid var(--primary-color);
    width: 100%;
}

h1 {
    font-size: 3rem;
    padding: 2rem;
    background-color: var(--primary-color);
    color: var(--secondary-color);
    border-bottom: 20px solid var(--accent-color);
}

h2 {
    margin: 1rem;
    text-align: center;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.data-list, .weather-list {
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin: 10px;
}

dt, dd {
    font-size: 1.15rem;
    margin: .5rem;
}

dt {
    text-align: right;
}

.data {
    border-bottom: 2px solid #eee;
}

.weather img {
    width: 100px;
    display: block;
    margin: 0px auto;
}

.weather-icon p {
    display: none;
}

footer {
    display: flex;
    flex-direction: column;
    text-align: center;
    font-size: 17px;
    padding: 1rem;
    background-color: var(--primary-color);
    color: white;
    width: 100%;
}

#lastModified {
    color: white;
}

